Changelog
=========

0.3.3 (development)
-------------------

- PEP8 and pyflakes cleanup
  [jcerjak]

0.3
---

- added DynamicVocabulary and SelectVocabulary column types
  [ajung]

0.2
---

- fixed for plone 4
  [vangheem]

0.1
---

- Created recipe with ZopeSkel
  [Steve McMahon]