@@ -4,6 +4,9 @@ Changelog
 0.3.3 (development)
 -------------------
 
+- fix setColumnDefs to make PFG form import work
+  [jcerjak]
+
 - PEP8 and pyflakes cleanup
   [jcerjak]
 
